--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "bootstrap-vue": "^1.0.0-beta.7",
     "vue": "^2.3.3",
     "vuex": "^2.4.0"
