--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.16.2",
     "bootstrap-vue": "^1.0.0-beta.7",
     "vue": "^2.3.3",
+    "vue-google-autocomplete": "^1.0.13",
     "vuex": "^2.4.0"
   },
   "devDependencies": {
