--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "bootstrap-vue": "^1.0.0-beta.7",
     "vue": "^2.3.3",
     "vue-google-autocomplete": "^1.0.13",
+    "vue-js-toggle-button": "^1.1.5",
     "vuex": "^2.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-env": "^1.5.1",
+    "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
